force-app/main/default/objects/Case/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>상담내역</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>