force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>제품</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>아이디어패드 Slim3</fullName>
            </value>
            <value>
                <fullName>2024 그램15</fullName>
            </value>
            <value>
                <fullName>Sword GF76</fullName>
            </value>
            <value>
                <fullName>2023 그램15</fullName>
            </value>
            <value>
                <fullName>젠북 14 OLED</fullName>
            </value>
            <value>
                <fullName>2024 그램16</fullName>
            </value>
            <value>
                <fullName>갤럭시북4 프로</fullName>
            </value>
            <value>
                <fullName>갤럭시북3</fullName>
            </value>
            <value>
                <fullName>프레데터 Helios Neo</fullName>
            </value>
            <value>
                <fullName>아이디어패드 Slim1</fullName>
            </value>
            <value>
                <fullName>키보드 K560</fullName>
            </value>
            <value>
                <fullName>키보드 F99</fullName>
            </value>
            <value>
                <fullName>키보드 CK01</fullName>
            </value>
            <value>
                <fullName>키보드 G413</fullName>
            </value>
            <value>
                <fullName>키보드 GK893B</fullName>
            </value>
            <value>
                <fullName>마우스 SUPERLIGHT</fullName>
            </value>
            <value>
                <fullName>마우스 MX Master</fullName>
            </value>
            <value>
                <fullName>마우스 DeathAdder</fullName>
            </value>
            <value>
                <fullName>마우스 M1300QB</fullName>
            </value>
            <value>
                <fullName>마우스 G102</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>