force-app/main/default/objects/Case/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>제품군</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>노트북</fullName>
            </value>
            <value>
                <fullName>주변기기</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>